--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Simple React App</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
